// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot displays with search button 1`] = `
<DocumentFragment>
  <form
    class="aje-input is-medium"
  >
    <label
      class="aje-label"
      for="SearchInput-:r1:-input"
    >
      search
    </label>
    <input
      id="SearchInput-:r1:-input"
      role="search"
      type="search"
      value=""
    />
    <button
      aria-label="submit search"
      type="submit"
    >
      <i
        aria-hidden="true"
        class="material-icons is-medium"
      >
        search
      </i>
    </button>
  </form>
</DocumentFragment>
`;

exports[`matches snapshot displays without button 1`] = `
<DocumentFragment>
  <form
    class="aje-input is-medium"
  >
    <label
      class="aje-label"
      for="SearchInput-:r0:-input"
    >
      search
    </label>
    <input
      id="SearchInput-:r0:-input"
      role="search"
      type="search"
      value=""
    />
  </form>
</DocumentFragment>
`;
